--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,10 +4,10 @@ set(requires "bluepad32")
 
 # See: https://gitlab.com/ricardoquesada/bluepad32/-/issues/9
 if(DEFINED ENV{BLUEPAD32_ARDUINO})
-    list(APPEND srcs "arduino_main.cpp")
+    list(APPEND srcs)
     list(APPEND requires "bluepad32_arduino" "arduino")
 endif()
 
-idf_component_register(SRCS "${srcs}"
+idf_component_register(SRCS "arduino_main.cpp" "${srcs}"
                     INCLUDE_DIRS "."
                     REQUIRES "${requires}")
